<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image"
        tools:alpha="1" />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="300dp"
        android:layout_height="175dp"
        android:layout_marginTop="74dp"
        android:contentDescription="@string/image_login_desc"
        android:src="@drawable/login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/login_signup"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:alpha="1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:alpha="0"
        android:background="@drawable/bg_edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
        tools:alpha="1"
        tools:ignore="RtlSymmetry" />

    <com.xridwan.mystoryfinal.ui.utils.CustomEditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:alpha="0"
        android:inputType="textPassword"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:alpha="1"
        tools:ignore="RtlSymmetry" />


    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/emailTextInputLayout"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="15dp"-->
    <!--        android:alpha="0"-->
    <!--        app:boxCornerRadiusBottomEnd="10dp"-->
    <!--        app:boxCornerRadiusBottomStart="10dp"-->
    <!--        app:boxCornerRadiusTopEnd="10dp"-->
    <!--        app:boxCornerRadiusTopStart="10dp"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"-->
    <!--        app:startIconDrawable="@drawable/ic_email"-->
    <!--        tools:alpha="1">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/email"-->
    <!--            android:id="@+id/et_email"-->
    <!--            android:inputType="textEmailAddress" />-->
    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/passwordTextInputLayout"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:alpha="0"-->
    <!--        app:boxCornerRadiusBottomEnd="10dp"-->
    <!--        app:boxCornerRadiusBottomStart="10dp"-->
    <!--        app:boxCornerRadiusTopEnd="10dp"-->
    <!--        app:boxCornerRadiusTopStart="10dp"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/emailTextInputLayout"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/emailTextInputLayout"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"-->
    <!--        app:startIconDrawable="@drawable/ic_lock"-->
    <!--        tools:alpha="1">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/password"-->
    <!--            android:id="@+id/et_password"-->
    <!--            android:inputType="textPassword" />-->
    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:background="@drawable/bg_button"
        android:text="@string/log_in"
        app:layout_constraintEnd_toStartOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintStart_toEndOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:alpha="1" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>